debugged the app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Aadichimote.github.io/TextUtils-react.js-",
-  "name": "TextUtils",
+  "name": "react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
